--- a/www/styles/parallax.css
+++ b/www/styles/parallax.css
@@ -364,10 +364,14 @@ img {
 .condense {
     width: 100%;
     height: 100%;
-    background-color: red;
-    transition: all 300ms ease-in;
+    transition: all 1000ms ease-in;
     position: absolute;
     background-color: yellowgreen;
+    -webkit-transition-duration: ;
+    -moz-transition-duration: 1000ms;
+    -ms-transition-duration: 1000ms;
+    -o-transition-duration: 1000ms;
+    transition-duration: 1000ms;
 }
 
 .condense p {
@@ -396,6 +400,8 @@ img {
 
 .condense.removable {
     background-color: deeppink;
+    transform: translate3d(0px, 0px, 175px) !important;
+    top: 0px;
 }
 
 .condense.move-in p {
