--- a/www/styles/parallax.css
+++ b/www/styles/parallax.css
@@ -364,7 +364,7 @@ img {
 .condense {
     width: 100%;
     height: 100%;
-    transition: all 1000ms ease-in;
+    transition: all 10s ease-in;
     position: absolute;
     background-color: yellowgreen;
     -webkit-transition-duration: ;
@@ -400,7 +400,7 @@ img {
 
 .condense.removable {
     background-color: deeppink;
-    transform: translate3d(0px, 0px, 175px) !important;
+    /*transform: translate3d(0px, 0px, 175px) !important;*/
     top: 0px;
 }
 
